footer out of place-bug fix

--- a/src/components/NavigationMenu/components/NavigationItem/styles.module.scss
+++ b/src/components/NavigationMenu/components/NavigationItem/styles.module.scss
@@ -23,7 +23,7 @@
     }
 
     &:active {
-        background: color.adjust($primary, $lightness: -10);
+        background: color.adjust($primary, $lightness: -10%);
     }
 }
 
