--- a/src/components/NavigationMenu/styles.module.scss
+++ b/src/components/NavigationMenu/styles.module.scss
@@ -8,11 +8,8 @@
     width: 100vw;
     height: 100vh;
 
-<<<<<<< HEAD
     overflow-y: auto;
 
-=======
->>>>>>> origin/master
     background-color: $white;
 
     @include responsive(md) {
@@ -36,11 +33,8 @@
     background-color: $backdrop;
 }
 
-<<<<<<< HEAD
-.navbar-toggle-button {
-=======
+
 .navbarToggleButton {
->>>>>>> origin/master
     position: fixed;
     top: 2rem;
     left: 2rem;
